# trading-system

./: .gitignore  Backtesting.ipynb  Makefile  README.md  example.env  main.py  pyproject.toml  requirements.txt
app/: cmd.py
config/: config-base.yaml  configuration.py
data/: alpacaData.py  cryptoDatabase.py  db_crypto.db  indicators.py
engine/: engine.py  interface.py
gateways/: gateway.py
gateways/alpaca/: alpacaGateway.py
gui/: dashboard.py
strategies/: strategy.py
strategies/RSI/: rsi.py
strategies/SMA/: sma.py
strategies/Strat1/: Strat1.py
tests/: test_app.py  tests.py
